# Lab-G

./: .gitignore  README.md  Test.iec60287.json  pyproject.toml  requirements.txt
fem_reports/fem_report_20251030_203123/: summary.json
fem_reports/fem_report_20251030_204657/: summary.json  temperature_field.csv
fem_reports/fem_report_20251031_082205/: summary.json  temperature_field.csv
scripts/: __init__.py  _benchmark_utils.py  ampacity_benchmark.py  fem_benchmark.py
src/iec60287/: main.py
src/iec60287.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/iec60287/fem/: __init__.py  analyzer.py  mesh_builder.py  mesh_preview.py  report.py
src/iec60287/gui/: ampacity_calculator.py  cable_fem.py  items.py  main_window.py  placement_scene.py  system_editor.py  trench_designer.py  view.py
src/iec60287/io/: __init__.py  configuration.py
src/iec60287/model/: __init__.py  cable_system.py  materials.py
